# voxwire

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: cursor-standards.mdc
.cursor/skills/cursor-standards/: SKILL.md
.github/workflows/: backend.yml  frontend.yml
client/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/: pcm-worklet.js
client/src/: audio.ts  latency-ui.ts  main.ts  playback.ts  ws.ts
docs/: architecture.md  event-protocol.md  latency-budget.md
server/: __init__.py  app.py  config.py
server/latency/: __init__.py  tracker.py
server/observability/: __init__.py  tracing.py
server/pipeline/: __init__.py  errors.py  orchestrator.py
server/providers/: __init__.py  asr.py  llm.py  tts.py
server/replay/: __init__.py  recorder.py
server/resilience/: __init__.py  breaker.py  policies.py
server/ws/: echo.py
tests/: conftest.py  test_asr.py  test_breaker.py  test_degradation.py  test_errors.py  test_health.py  test_latency.py  test_llm.py  test_orchestrator.py  test_policies.py  test_recorder.py  test_timeouts.py  test_tracing.py  test_tts.py
